[build-system]
requires        = [
    "setuptools>=61.0"
]
build-backend   = "setuptools.build_meta"

[tool.setuptools]
packages = ["pymunge"]

[tool.setuptools.package-dir]
"" = "source"

[project]
name            = "pymunge"
version         = "0.0.1"
requires-python = ">=3.11"
description     = "SWBF Python munger"
readme          = "README.md"
authors         = [ { name="styinx" } ]
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
license         = { file="LICENSE" }

[project.urls]
Homepage = "https://github.com/styinx/pymunge"
Issues = "https://github.com/styinx/pymunge/issues"
