[build-system]
requires        = [
    "build~=1.2.2",
    "setuptools>=61.0"
]
build-backend   = "setuptools.build_meta"

[tool.setuptools]
packages = ["pymunge"]

[tool.setuptools.dynamic]
version = { attr="pymunge.__VERSION__" }

[tool.setuptools.package-dir]
"" = "source"

[tool.yapfignore]
ignore_patterns = []


[project]
name            = "swbf-pymunge"
dynamic         = ["version"]
requires-python = ">=3.11"
description     = "SWBF Python munger"
readme          = "README.md"
authors         = [ { name="styinx" } ]
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
license         = { file="LICENSE" }
dependencies    = [
    "parxel~=0.0.22",
    "windows-curses~=2.4.1; sys_platform == 'win32'"
]

[project.optional-dependencies]
docs = [
    "furo~=2024.8.6",
    "Sphinx~=8.2.3",
    "sphinx-argparse~=0.5.2",
]
formatting = [
    "yapf~=0.43.0"
]

[project.urls]
Homepage = "https://github.com/styinx/pymunge"
Issues = "https://github.com/styinx/pymunge/issues"
